@@ -229,6 +229,9 @@ BUGFIXES:
   ZOOKEEPER-2304: JMX ClientPort from ZooKeeperServerBean incorrect
   (Arshad Mohammad via rgs)
 
+  ZOOKEEPER-2301: QuorumPeer does not listen on passed client IP in the constructor
+  (Arshad Mohammad via rgs)
+
 IMPROVEMENTS:
   ZOOKEEPER-1660 Documentation for Dynamic Reconfiguration (Reed Wanderman-Milne via shralex)  
 
